--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.11",
+    "@chakra-ui/react": "^2.3.5",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "eslint-config-prettier": "^8.5.0",
+    "framer-motion": "^6.5.1",
+    "husky": "^8.0.1",
     "next": "12.3.1",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
