--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-prettier": "^8.5.0",
     "framer-motion": "^6.5.1",
     "husky": "^8.0.1",
+    "moment": "^2.29.4",
     "next": "12.3.1",
     "prettier": "^2.7.1",
     "react": "18.2.0",
@@ -27,6 +28,7 @@
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/shortid": "^0.0.29",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "typescript": "4.8.4"
